# q-kafka

./: Cargo.toml  README.md  docker-compose.yml
connect/: Dockerfile
src/: admin.rs  api.rs  command_processor.rs  commands.rs  commands_schema.rs  config.rs  consumer.rs  db.rs  events_schema.rs  inputs_schema.rs  main.rs  materialized_view.rs  producer.rs  queries.rs  utils.rs
src/docs/: s3_sink.org
