[package]
name = "type-kafka"
version = "0.1.0"
authors = ["sambacha <sambacha@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
futures = { version = "0.3", features = ["compat"] }
log = "0.4"
maplit = "1.0.2"
rdkafka = "0.25"
serde = "1.0"
serde_derive = "1.0.123"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = "0.3"
